@@ -2,19 +2,25 @@ RM := rm -f
 
 CFLAGS = \
 	-D_FORTIFY_SOURCE=2    \
-	-D_GNU_SOURCE          \
+	-D_POSIX_SOURCE=199506 \
 	-Iinclude              \
 	-O3                    \
 	-Wall                  \
 	-Wextra                \
+	-Wformat=2             \
 	-Wmissing-declarations \
+	-Wmissing-include-dirs \
+	-Wnull-dereference     \
 	-Wpedantic             \
+	-Wpointer-arith        \
+	-Wstrict-overflow=5    \
 	-g                     \
 	-o$(@)                 \
 	-std=c99
 
 OBJS := \
 	src/chkpar.o \
+	src/cpy.o    \
 	src/exi.o    \
 	src/getsum.o \
 	src/hlp.o    \
@@ -28,6 +34,8 @@ BIN := agbsum
 
 $(BIN): $(OBJS)
 	$(CC) -o$(BIN) $(OBJS)
+
+$(OBJS): include/agbsum.h
 
 .PHONY: clean install purge
 
