@@ -11,7 +11,8 @@
 
 #include <stddef.h>
 
-void agb_inidat (agb_dat * const restrict dat)
+void
+agb_inidat (agb_dat * const restrict dat)
 {
 	dat->dopat = false;
 	dat->pth   = NULL;
